@@ -5,3 +5,14 @@ $_EXECUTION='Execution';
 $_RESPOSIBLE='Resposible';
 $_HIDE='Hide';
 $_INNER='Inner message';
+
+
+$_VERY_LOW='very low';
+$_LOW='low';
+$_NORMAL='normal';
+$_HIGH='high';
+$_VERY_HIGH='very high';
+
+$_OPEN='open';
+$_CLOSED_UNSUCCESSFUL='closed unsuccessful';
+$_CLOSED='closed successful';
